Comparing with the Animov weights (#1)
- Comparing with the Animov weights (592b0139f43794675b075e4044590c1e5f6c785d)


Co-authored-by: tin tin <tintwotin@users.noreply.huggingface.co>

--- a/vae/config.json
+++ b/vae/config.json
@@ -1,7 +1,7 @@
 {
   "_class_name": "AutoencoderKL",
   "_diffusers_version": "0.17.0.dev0",
-  "_name_or_path": "/home/ubuntu/models/model_scope_diffusers/",
+  "_name_or_path": "./models/model_scope_diffusers/",
   "act_fn": "silu",
   "block_out_channels": [
     128,
