--- a/text_encoder/config.json
+++ b/text_encoder/config.json
@@ -1,5 +1,5 @@
 {
-  "_name_or_path": "/home/ubuntu/models/model_scope_diffusers/",
+  "_name_or_path": "./models/model_scope_diffusers/",
   "architectures": [
     "CLIPTextModel"
   ],
